2003-07-15  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.h:
	* gui/oprof_start.cpp:
	* gui/oprof_start_util.cpp: re-enable partially the gui, sorta of
	  working if cautioulsy used

2003-07-15  John Levon  <levon@movementarian.org>

	* gui/ui/oprof_start_base.ui:
	* gui/oprof_start.h:
	* gui/oprof_start.cpp: some steps towards fixing gui for
	the new events stuff

2003-07-15  John Levon  <levon@movementarian.org>

	* libop/op_events.h:
	* libop/op_events.c: add op_default_event

	* utils/op_help.c: move default event stuff to libop,
	fix -c option

2003-07-15  John Levon  <levon@movementarian.org>

	* utils/op_help.c: fix default RTC event to be
	"RTC_INTERRUPTS"

2003-07-15  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/opcontrol
	* events/rtc..events: use RTC_INTERRUPTS as event name

2003-07-15  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_sample_files.c: C89 compile fix

2003-07-15  John Levon  <levon@movementarian.org>

	* utils/opcontrol:
	* utils/op_help.c: move the default event strings into
	op_help.c instead of in opcontrol

2003-07-15  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: document event name for timer interrupt

	* daemon/opd_sample_files.c: handle CPU_TIMER_INT

	* utils/op_help.c: fix a core dump

2003-07-13  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_image.c: verbprintf() when starting reading buffer not
	  printf

2003-07-12  Philippe Elie  <phil.el@wanadoo.fr>

	* from BRANCH_CALLGRAPH:
	* daemon/opd_image.c: printf -> verbprintf, fix comment
	* daemon/opd_kernel.c: kernel/module samples statistics was wrong

	* daemon/opd_image.c:
	* daemon/opd_image.h:
	* daemon/opd_kernel.c:
	* daemon/opd_kernel.h: import cleanup from branch, mainly don't handle
	  samples in opd_kernel.c but return (creating if neccessary) an
	  opd_image struct where the sample must go and let opd_image caller
	  in opd_image.c do sample insertion

2003-07-11  Philippe Elie  <phil.el@wanadoo.fr>
